quick fix where text was getting cut off

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2898,6 +2898,7 @@ input, select, textarea {
 					padding: 0;
 					margin: 0;
 					border: 0;
+					width: 400px;
 				}
 
 				#footer .copyright li a, #footer .copyright li span {
